Update img Link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <table cellspacing = "20">
         <tr>
-            <td><img src="cv/images/me.jpg" alt="Faisal's Profile Picture!"></td>
+            <td><img src="/images/me.jpg" alt="Faisal's Profile Picture!"></td>
             <td> <h1>ER Faisal</h1>
                 <p><em>Founder and CTO of the <strong><a href="https://www.pexels.com/photo/clouds-cloudy-countryside-farm-236047/">FirstTrust Soft BD</a> </strong>.</em></p>
                 <p>I am a web developer and system analyst. I love sweet and red book.</p>
